--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,24 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ff7866"
+        android:background="@color/black"
         tools:context=".src.view.MainActivity">
         
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_header_image"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/_150sdp"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_height="@dimen/_120sdp"/>
+            android:layout_height="@dimen/_100sdp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_header_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@android:color/holo_orange_light"
             tools:text="hhhs"
+            android:fontFamily="sans-serif-condensed"
             android:gravity="center"
             android:textSize="@dimen/_18sdp"
             android:layout_margin="@dimen/_15sdp"
@@ -35,7 +37,9 @@
             android:id="@+id/linear_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/white"
+            android:padding="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_40sdp"
+            android:background="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@id/tv_header_title"/>
