--- a/app/src/main/res/layout/item_edit_text.xml
+++ b/app/src/main/res/layout/item_edit_text.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<EditText xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/edit_text"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edit_text"
-        android:layout_width="match_parent"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:hint="this is edit text"
-        android:padding="@dimen/_10sdp"
-        android:background="@android:color/holo_purple"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_height="wrap_content"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:background="@color/EditGreyColor"
+    android:fontFamily="sans-serif"
+    android:padding="@dimen/_10sdp"
+    android:textSize="@dimen/_14sdp"
+    android:inputType="text"
+    android:maxLines="1"
+    android:layout_marginBottom="@dimen/_20sdp"
+    android:focusable="true"
+    android:clickable="true"
+    android:textColor="@color/black"
+    android:textColorHint="@color/EditHintColor"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:hint="this is edit text"
+    android:importantForAutofill="no" />
