--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimaryDark">#FF3700B3</color>
+    <color name="lightGreyColor">#E9E9EA</color>
+    <color name="EditGreyColor">#DDDDEA</color>
+    <color name="EditHintColor">#7C7171</color>
+
 </resources>
