--- a/app/src/main/res/layout/item_button.xml
+++ b/app/src/main/res/layout/item_button.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/holo_green_dark"
+    android:background="@color/orangeColor"
     android:fontFamily="sans-serif-medium"
     android:padding="@dimen/_10sdp"
     android:gravity="center"
     android:textAllCaps="true"
-    android:layout_margin="@dimen/_10sdp"
     android:textColor="@color/white"
     android:textSize="@dimen/_20sdp"
     app:layout_constraintStart_toStartOf="parent"
