--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,37 +12,33 @@
         android:layout_height="match_parent"
         android:background="@color/black"
         tools:context=".src.view.MainActivity">
-        
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_header_image"
-            android:layout_width="@dimen/_150sdp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_height="@dimen/_100sdp"/>
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_header_title"
+        <include
+            android:id="@+id/include_loader_section"
+            layout="@layout/loader_screen"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/holo_orange_light"
-            tools:text="hhhs"
-            android:fontFamily="sans-serif-condensed"
-            android:gravity="center"
-            android:textSize="@dimen/_18sdp"
-            android:layout_margin="@dimen/_15sdp"
-            app:layout_constraintTop_toBottomOf="@id/iv_header_image"/>
-
-        <LinearLayout
-            android:id="@+id/linear_container"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:padding="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_40sdp"
-            android:background="@color/black"
+            android:layout_height="match_parent"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@id/tv_header_title"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <include
+            android:id="@+id/include_main_section"
+            layout="@layout/include_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <include
+            android:id="@+id/include_error_section"
+            layout="@layout/error_screen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
