--- a/app/src/main/res/layout/error_screen.xml
+++ b/app/src/main/res/layout/error_screen.xml
@@ -8,16 +8,16 @@
         android:layout_height="match_parent"
         android:background="@color/black">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_error"
-            android:layout_width="@dimen/_120sdp"
-            android:layout_height="@dimen/_120sdp"
-            android:src="@drawable/ic_launcher_background"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_16sdp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="error image" />
+            app:srcCompat="@drawable/ic_error_state" />
 
         <TextView
             android:id="@+id/tv_message"
@@ -27,6 +27,8 @@
             android:textColor="@color/white"
             android:textSize="@dimen/_14sdp"
             android:visibility="visible"
+            android:padding="@dimen/_10sdp"
+            android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_error"
