--- a/app/src/main/res/layout/item_button.xml
+++ b/app/src/main/res/layout/item_button.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@color/orangeColor"
     android:fontFamily="sans-serif-medium"
-    android:padding="@dimen/_10sdp"
+    android:padding="@dimen/_6sdp"
+    android:layout_margin="@dimen/_10sdp"
     android:gravity="center"
     android:textAllCaps="true"
     android:textColor="@color/white"
