--- a/app/src/main/res/layout/item_edit_text.xml
+++ b/app/src/main/res/layout/item_edit_text.xml
@@ -5,7 +5,8 @@
     android:id="@+id/edit_text"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/EditGreyColor"
+    android:layout_margin="@dimen/_8sdp"
+    android:background="@drawable/bg_edit_text_drawable"
     android:fontFamily="sans-serif"
     android:padding="@dimen/_10sdp"
     android:textSize="@dimen/_14sdp"
@@ -14,8 +15,8 @@
     android:layout_marginBottom="@dimen/_20sdp"
     android:focusable="true"
     android:clickable="true"
-    android:textColor="@color/black"
-    android:textColorHint="@color/EditHintColor"
+    android:textColor="@color/white"
+    android:textColorHint="@color/white"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     tools:hint="this is edit text"
