--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimaryDark">#FF3700B3</color>
     <color name="lightGreyColor">#E9E9EA</color>
-    <color name="EditGreyColor">#DDDDEA</color>
+    <color name="editGreyColor">#95DDDDEA</color>
     <color name="EditHintColor">#7C7171</color>
     <color name="orangeColor">#E4A548</color>
 
